# Mie-Theory-2D-Cylinder

./: .dockerignore  .gitignore  Dockerfile  Makefile  README.md  package-lock.json  package.json  tsconfig.app.json  vite.config.ts
.githooks/: pre-commit
.github/workflows/: deploy.yml  version-check.yml
figures/: figures.drawio
scattering-core/: Cargo.toml  bessel_generator.py
scattering-core/artifacts/: bessel_i_evaluations.txt  bessel_j_evaluations.txt  bessel_k_evaluations.txt  hankel1_evaluations.txt
scattering-core/benches/: field_benchmark.rs  field_benchmark_report.txt
scattering-core/src/: bessel.rs  field.rs  lib.rs  scattering.rs  sources.rs
scattering-core/tests/: bessel_generator.py  bessel_validation.rs
scattering-core/tests/truth_data/: bessel_i_edge_cases.txt  bessel_i_evaluations.txt  bessel_j_edge_cases.txt  bessel_j_evaluations.txt  bessel_k_edge_cases.txt  bessel_k_evaluations.txt  hankel1_edge_cases.txt  hankel1_evaluations.txt
src/: App.css  App.tsx  scattering-core.d.ts
src/components/: ComplexPlane.css  ComplexPlane.tsx  CylinderControls.css  CylinderControls.tsx  FieldVisualization.css  FieldVisualization.tsx
src/hooks/: useScattering.ts
src/types/: cylinder.ts  scattering-core.d.ts
src/workers/: scattering.worker.ts
