[package]
name = "scattering-core"
version = "0.1.0"
authors = ["Sean Gorsky <gorskysd@gmail.com>"]
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]


[dependencies]
wasm-bindgen = "0.2.84"
num-complex = "0.4"
js-sys = "0.3"
web-sys = { version = "0.3", features = ["console"] }

# Better panic messages in debug mode
console_error_panic_hook = { version = "0.1.7", optional = true }

[dev-dependencies]
wasm-bindgen-test = "0.3.34"
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "field_benchmark"
harness = false

[profile.release]
opt-level = 3
lto = true